--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,25 @@
 <div class="demo-table">
   <div class="demo-table__row">
     <div class="demo-table__column">
-      <div class="icon icon--cat" [tooltip]="'Meow on the LEFT!'"></div>
+      <div class="icon icon--cat" [tooltip]="'Tooltip LEFT!'" [position]="ttpPosition.LEFT"></div>
     </div>
     <div class="demo-table__column">
-      <div class="icon icon--cat" [tooltip]="'Meow on the RIGHT!'"></div>
+      <div class="icon icon--cat" [tooltip]="'Tooltip RIGHT!'" [position]="ttpPosition.RIGHT"></div>
     </div>
   </div>
-  <!-- <div class="demo-table__row">
+  <div class="demo-table__row">
     <div class="demo-table__column demo-table__column--dark">
-      <div class="icon icon--vader" [tooltip]="'Welcome to the DARK side!'" position="below" theme="light"></div>
+      <div class="icon icon--vader" [tooltip]="'Tooltip in DARK theme!'" [position]="ttpPosition.BOTTOM" [theme]="ttipTheme.LIGHT"></div>
     </div>
   </div>
   <div class="demo-table__row">
     <div class="demo-table__column">
-      <div class="icon icon--cat" [tooltip]="'Hide and seek!'" position="right" showDelay="300" hideDelay="500"></div>
+      <div class="icon icon--cat" [tooltip]="'Hide and seek!'" [showDelay]="300" [hideDelay]="500"></div>
     </div>
-  </div> -->
+  </div>
   <div class="demo-table__row">
     <div class="demo-table__column">
-      <canvas class="canvas" [tooltip]="coordinates" position="dynamic"></canvas>
+      <canvas class="canvas" [tooltip]="coordinates" [position]="ttpPosition.DYNAMIC"></canvas>
     </div>
   </div>
 </div>
